Added start/stop remote control linking methods required by interface.

--- a/DronelinkAutel/Resources/Localizable.strings
+++ b/DronelinkAutel/Resources/Localizable.strings
@@ -42,6 +42,8 @@
 "AutelDroneSession.createControlSession.execution.engine.unsupported" = "Unsupported execution engine: %@";
 
 "AutelDroneAdapter.stopCompassCalibration.unavailable" = "Unable to stop compass calibration";
+"AutelDroneAdapter.startRemoteControlLinking.unavailable" = "Unable to start remote control linking";
+"AutelDroneAdapter.stopRemoteControlLinking.unavailable" = "Unable to stop remote control linking";
 
 "AutelDroneSession+CameraCommand.stop.capture.error" = "Camera still capturing";
 "AutelDroneSession+CameraCommand.start.shoot.photo.no.file" = "Media File Not Created";
