--- a/DronelinkAutel/Resources/Localizable.strings
+++ b/DronelinkAutel/Resources/Localizable.strings
@@ -41,8 +41,7 @@
 "AutelDroneSession.telemetry.unavailable" = "Telemetry Unavailable";
 "AutelDroneSession.createControlSession.execution.engine.unsupported" = "Unsupported execution engine: %@";
 
-"AutelDroneSessionManager.startRemoteControllerLinking.unavailable" = "Unable to start remote control linking.";
-"AutelDroneSessionManager.stopRemoteControllerLinking.unavailable" = "Unable to stop remote control linking.";
+"AutelDroneSessionManager.remoteControllerLinking.unavailable" = "Remote controller is unavailable.";
 
 "AutelDroneAdapter.stopCompassCalibration.unavailable" = "Unable to stop compass calibration";
 
