Rc pairing button main (#1)
* Added start/stop remote control linking methods required by interface.

* -default to unknown pairing state to conform to remoteControllerState interface

* added start stop linking methods to make interface happy. They return error strings only.

* remove pairing state implementation.

* autel start/stop linking

* whitespace

Co-authored-by: Nicolas Roberts <nicolas@dronelink.com>

--- a/DronelinkAutel/Resources/Localizable.strings
+++ b/DronelinkAutel/Resources/Localizable.strings
@@ -41,6 +41,8 @@
 "AutelDroneSession.telemetry.unavailable" = "Telemetry Unavailable";
 "AutelDroneSession.createControlSession.execution.engine.unsupported" = "Unsupported execution engine: %@";
 
+"AutelDroneSessionManager.remoteControllerLinking.unavailable" = "Remote controller is unavailable.";
+
 "AutelDroneAdapter.stopCompassCalibration.unavailable" = "Unable to stop compass calibration";
 
 "AutelDroneSession+CameraCommand.stop.capture.error" = "Camera still capturing";
