--- a/DronelinkAutel/Resources/Localizable.strings
+++ b/DronelinkAutel/Resources/Localizable.strings
@@ -48,7 +48,7 @@
 "AutelDroneSession+CameraCommand.stop.capture.error" = "Camera still capturing";
 "AutelDroneSession+CameraCommand.start.shoot.photo.no.file" = "Media File Not Created";
 
-"AutelRemoteControllerAdapter.DeviceCharging.unavailable" = "Device charging is not available for this remote controller.";
+"AutelRemoteControllerAdapter.deviceCharging.unavailable" = "Device charging is not available for this remote controller.";
 
 "DronelinkAutel:AUTELMCSystemState.statusMessages.locationUnavailable.title" = "GPS Signal Unavailable";
 "DronelinkAutel:AUTELMCSystemState.statusMessages.locationUnavailable.details" = "Please wait for a strong GPS signal lock to continue.";
